# nutrimate

./: .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  HANDOFF.md  IMPLEMENTATION_PLAN.md  LICENSE  PRD.md  README.md  TRD.md  design.md  eslint.config.js  package.json  pnpm-lock.yaml  project-description.md  tsconfig.base.json
apps/api/: README.md  package.json  tsconfig.json
apps/api/src/: app.ts  server.ts
apps/api/src/config/: env.ts
apps/api/src/data/: food-catalog-seed.json
apps/api/src/db/: mongo.ts
apps/api/src/jobs/: scheduler.ts
apps/api/src/lib/: bmi.ts  dates.ts  errors.ts  jwt.ts  logger.ts  mifflin.ts  (+2 more)
apps/web/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
designs/: nutrimate_project_specification.txt
designs/dashboard/: code.html
designs/landing_page_public/: code.html
designs/login_register/: code.html
designs/meal_recommendations/: code.html
designs/nutrimate_design_system/: DESIGN.md
designs/nutrition_search/: code.html
designs/profile_settings/: code.html
designs/profile_setup_wizard/: code.html
designs/progress_analytics/: code.html
designs/system_states_empty_loading_error/: code.html
services/ml/: .env.example  .gitignore  README.md  pyproject.toml
services/ml/nutrimate_ml/: __init__.py  artifacts.py  config.py  main.py  predictor.py  recommender.py  risk.py  schemas.py
services/ml/pipelines/: preprocess.py  preprocess_obesity.py  seed_data.py  train_ann.py  train_knn.py  train_svm.py
(+92 files in other folders)
