[project]
name = "nutrimate-ml"
version = "0.1.0"
description = "NutriMate ML service: ANN calorie prediction + KNN meal recommendation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "tensorflow>=2.15,<2.17",
    "joblib>=1.3,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nutrimate_ml*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
